# clawde

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  gitleaks.toml
.github/docs/: Meridian-Bridge-Blueprint.md  clawde-bm25-migration.md
.github/wiki/: Architecture.md  Changelog.md  ClawDE-Plus.md  Contributing.md  Contributors.md  Deep-Links.md  Folder-Structure.md  Multi-Account.md  crd-parity-spec.md  daemon-spec.md  evaluation.md  inbox-watcher-spec.md  license-state-machine.md  lsp.md  mcp-server-spec.md  notifications-spec.md  oauth-pool.md  observability.md  task-queue-spec.md  ui-states.md
.github/workflows/: ci.yml  clawd-review.yml  clawde-ci.yml  contributors.yml  debian-package.yml  desktop-windows.yml  doc-sync.yml  eval.yml  go-intelligence.yml  homebrew-tap.yml  ios-release.yml  macos-notarize.yml  macos-release.yml  mobile-ci.yml  multi-arch-check.yml  mutation-testing.yml  price-lint.yml  quarterly-doc-audit.yml  release.yml  wiki-sync.yml
apps/: CHANGELOG.md  VERSIONING.md  melos.yaml
apps/daemon/: Cargo.toml  deny.toml
apps/desktop/: .env.example  .gitignore  index.html  jest.config.cjs  jest.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pubspec.yaml  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs
clawde-proxy/: go.mod  main.go
daemon/: go.mod  go.sum
evaluation/: baseline.json  metrics.test.ts  metrics.ts  run_eval.sh  validate-datasets.ts
intelligence/: Makefile  README.md  docker-compose.vllm.yml  go.mod  go.sum  hardening-gate-report.md
observability/: cost-rates.json  cost-tracker.test.ts  cost-tracker.ts  migration.ts  redact.test.ts  redact.ts  types.ts
(+437 files in other folders)
