[package]
name = "clawde-desktop"
version = "0.3.2"
description = "ClawDE desktop shell — Tauri 2 + React"
edition = "2021"
license = "MIT"
repository = "https://github.com/nself-org/clawde"

[lib]
name = "clawde_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clawde-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core
tauri = { version = "2", features = [
  "macos-proxy",
  "tray-icon",
  "image-png",
  "protocol-asset",
] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client — connects to clawd daemon on port 4300
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP client — REST API on port 4301
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific: sidecar process management helpers
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
incremental = true
